src-python/darknet.py


# Platform-specific library path and initialization
if os.name == "posix":
    libpath = "/usr/lib/libdarknet.so"
elif os.name == "nt":
    libpath = "C:/Program Files/darknet/bin/darknet.dll"
else:
    print("Unsupported OS")
    exit
lib = CDLL(libpath, RTLD_GLOBAL)

# Argument types and return types for Darknet functions
lib.network_width.argtypes = [c_void_p]
lib.network_width.restype = c_int
lib.network_height.argtypes = [c_void_p]
lib.network_height.restype = c_int


# Define and comment function to copy image data from bytes to a Darknet IMAGE object
copy_image_from_bytes = lib.copy_image_from_bytes
copy_image_from_bytes.argtypes = [IMAGE, c_char_p]

# Define and comment function to predict using a Darknet network
predict = lib.network_predict_ptr
predict.argtypes = [c_void_p, POINTER(c_float)]
predict.restype = POINTER(c_float)

# Define and comment function to set the GPU device for Darknet
set_gpu = lib.cuda_set_device

# Define and comment function to initialize Darknet for CPU processing
init_cpu = lib.init_cpu

# Define and comment function to create a Darknet IMAGE object
make_image = lib.make_image
make_image.argtypes = [c_int, c_int, c_int]
make_image.restype = IMAGE

# Define and comment function to get network boxes for detections
get_network_boxes = lib.get_network_boxes
get_network_boxes.argtypes = [c_void_p, c_int, c_int, c_float, c_float, POINTER(c_int), c_int, POINTER(c_int), c_int]
get_network_boxes.restype = POINTER(DETECTION)

# Define and comment function to create network boxes
make_network_boxes = lib.make_network_boxes
make_network_boxes.argtypes = [c_void_p]
make_network_boxes.restype = POINTER(DETECTION)

# Define and comment function to free detections
free_detections = lib.free_detections
free_detections.argtypes = [POINTER(DETECTION), c_int]

# Define and comment function to free batch detections
free_batch_detections = lib.free_batch_detections
free_batch_detections.argtypes = [POINTER(DETNUMPAIR), c_int]

# Define and comment function to free pointers
free_ptrs = lib.free_ptrs
free_ptrs.argtypes = [POINTER(c_void_p), c_int]

# Define and comment function to predict using a Darknet network
network_predict = lib.network_predict_ptr
network_predict.argtypes = [c_void_p, POINTER(c_float)]

# Define and comment function to reset RNN (Recurrent Neural Network)
reset_rnn = lib.reset_rnn
reset_rnn.argtypes = [c_void_p]

# Define and comment function to load a Darknet network
load_net = lib.load_network
load_net.argtypes = [c_char_p, c_char_p, c_int]
load_net.restype = c_void_p

# Define and comment function to load a custom Darknet network
load_net_custom = lib.load_network_custom
load_net_custom.argtypes = [c_char_p, c_char_p, c_int, c_int]
load_net_custom.restype = c_void_p

# Define and comment function to free a network pointer
free_network_ptr = lib.free_network_ptr
free_network_ptr.argtypes = [c_void_p]
free_network_ptr.restype = c_void_p

# Define and comment function to perform Non-Maximum Suppression (NMS) on object detections
do_nms_obj = lib.do_nms_obj
do_nms_obj.argtypes = [POINTER(DETECTION), c_int, c_int, c_float]

# Define and comment function to perform NMS with sorted results
do_nms_sort = lib.do_nms_sort
do_nms_sort.argtypes = [POINTER(DETECTION), c_int, c_int, c_float]

# Define and comment function to free a Darknet image
free_image = lib.free_image
free_image.argtypes = [IMAGE]

# Define and comment function to letterbox a Darknet image
letterbox_image = lib.letterbox_image
letterbox_image.argtypes = [IMAGE, c_int, c_int]
letterbox_image.restype = IMAGE

# Define and comment function to load metadata for Darknet
load_meta = lib.get_metadata
lib.get_metadata.argtypes = [c_char_p]
lib.get_metadata.restype = METADATA

# Define and comment function to load a color image for Darknet
load_image = lib.load_image
load_image.argtypes = [c_char_p, c_int, c_int, c_int]
load_image.restype = IMAGE

# Define and comment function to convert RGB image to BGR
rgbgr_image = lib.rgbgr_image
rgbgr_image.argtypes = [IMAGE]

# Define and comment function to predict using an image and a Darknet network
predict_image = lib.network_predict_image
predict_image.argtypes = [c_void_p, IMAGE]
predict_image.restype = POINTER(c_float)

# Define and comment function to predict using a letterboxed image and a Darknet network
predict_image_letterbox = lib.network_predict_image_letterbox
predict_image_letterbox.argtypes = [c_void_p, IMAGE]
predict_image_letterbox.restype = POINTER(c_float)

# Define and comment function to predict using a batch of images and a Darknet network
network_predict_batch = lib.network_predict_batch
network_predict_batch.argtypes = [c_void_p, IMAGE, c_int, c_int, c_int, c_float, c_float, POINTER(c_int), c_int, c_int]
network_predict_batch.restype = POINTER(DETNUMPAIR)
